[package]
name = "veld-chat-pc-rev1"
version = "0.1.0"
authors = ["loggers-bro <qbotdev84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "*"
futures = "0.3.12"
async-tungstenite = { version = "0.12.0", features = ["tokio-runtime", "tokio-native-tls"] }
tokio = { version = "1.1.0", features = ["full"] }
json = "0.12.4"
async-mutex = "1.4.0"
reqwest = { version = "*", features = ["json"] }
iced = "*"
